Bug #4902 Stored procedure with SHOW WARNINGS leads to packet error
Submitted: 5 Aug 2004 2:19 Modified: 6 Aug 2004 15:59
Reporter: Peter Gulutzan
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.2-alpha-debug OS:Linux (SuSE 8.2)
Assigned to: Bugs System Target Version:

[5 Aug 2004 2:19] Peter Gulutzan
Description:
A stored procedure which has SHOW WARNINGS will lead to a "packets out of order" 
message. 

How to repeat:
mysql> create procedure pip () show warnings; 
Query OK, 0 rows affected (0.00 sec) 
 
mysql> call pip(); 
Empty set (0.00 sec) 
 
mysql> call pip(); 
Packets out of order (Found: 7, expected 1) 
ERROR 2013 (HY000): Lost connection to MySQL server during query
[6 Aug 2004 4:59] Miguel Solorzano
Verified against latest 5.0 source tree.
[6 Aug 2004 15:59] Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html