Fixed BUG#4902: Stored procedure with SHOW WARNINGS leads to packet error,   and tried to do it properly this time, digging out all show commands that   need the multi results flag set.